# trading_bot

./: .gitignore  DIRECTORY_STRUCTURE.md  HIGH_AVAILABILITY.md  HIGH_RELIABILITY_ARCHITECTURE.md  HIGH_RELIABILITY_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_PLAN.md  PHASE2_SUMMARY.md  README.md  README_HIGH_RELIABILITY.md  README_PAPER_TRADING.md  RELIABILITY_SUMMARY.md  STRATEGY_TESTING.md  __init__.py  check_connectivity.ps1  check_syntax.py  cleanup.py  cleanup_plan.md  component_test_results.md  connectivity_check_results.txt  controller copy.py  controller.py  debug_components.py  high_availability_requirements.txt  high_reliability_README.md  high_reliability_requirements.txt  install_high_reliability.py  integrated_trading_pipeline.py  main.py  nobitex_client.py  phase2_demo.py  requirements.txt  requirements_phase2.txt  run_live_tests.ps1  run_live_tests_simple.ps1  run_paper_trading.py  run_phase1_tests.py  run_phase2_test.py  run_pipeline.py  run_risk_test.py  (+14 more)
adapters/: legacy_bridge.py
config/: auto_trader_config.json  config_loader.py  paper_trading_config.json  pipeline_config.json  test_config.json  trader_config.json  trading_config.json  trading_config.yaml
core/: MESSAGE_BUS.md  __init__.py  async_rabbitmq_broker.py  circuit_breaker.py  component.py  config.py  database.py  database_manager.py  exchange.py  high_availability.py  logging.py  message_broker.py  message_bus.py  order.py  rabbitmq_broker.py  reconciliation_service.py  transaction_verification.py
high_performance/order_engine/: Cargo.toml
high_performance/order_engine/src/: lib.rs
(+177 files in other folders)
