[package]
name = "order_engine"
version = "0.1.0"
edition = "2021"
authors = ["Trading System Team"]
description = "High-performance order matching engine"

[lib]
name = "order_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rayon = "1.7.0"  # Parallel computing
dashmap = "5.5.0"  # Concurrent hashmap
crossbeam = "0.8.2"  # Concurrent data structures
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
chrono = "0.4.26"  # Time handling
log = "0.4.19"
fern = "0.6.2"  # Logging
uuid = { version = "1.4.1", features = ["v4"] }
smallvec = "1.11.0"  # Optimized small vectors
twox-hash = "1.6.3"  # Fast hashing
mimalloc = { version = "0.1.37", default-features = false }  # Fast allocator

[profile.release]
lto = true  # Link-time optimization
codegen-units = 1  # Maximize optimizations
opt-level = 3  # Maximum optimization
panic = "abort"  # Remove stack unwinding for panics
debug = false  # No debug symbols

[build-dependencies]
pyo3-build-config = "0.19.0" 